@@ -38,6 +38,8 @@
 <p>2019-05-14  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/jp2.c: Make more data const.</li>
+<li>coders/wmf.c: Make more data const.</li>
 <li>coders/ps.c (WritePSImage): Make more data const.</li>
 <li>coders/ps2.c (WritePS2Image): Make more data const.</li>
 </ul>
